# cookie-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cookie.rs  jar.rs  lib.rs  prison.rs
src/cookie/: builder.rs  parse.rs
src/cookie/parse/: error.rs
src/jar/: changed.rs  parse.rs
tests/: jar.rs  parse.rs  string.rs  tests.rs
