[package]
name = "cookie-rs"
version = "0.4.2"
repository = "https://github.com/magwoo/cookie-rs"
description = "library for working with HTTP cookies"
keywords = ["cookie", "http", "web"]
readme = "./README.md"
license = "MIT"
edition = "2021"

[features]
default = ["percent-encoding"]
percent-encoding = ["dep:percent-encoding"]

[dependencies]
percent-encoding = { version = "2", optional = true }

